@startuml

package com.gelvt.gofdp.adapter{

    interface Resource <<资源的抽象>>{
        + exists() : boolean
        + getFile() : File
        + getFilename() : String
        + getURI() : URI
    }

    interface ResourceLoader <<资源加载器>>{
        + loadResourceAsStream(resource : Resource) : InputStream
    }

    class FileSystemResource <<文件系统中的资源>>{
        + FileSystemResource(file : File)
        + FileSystemResource(path : String)
        + exists() : boolean
        + getFile() : File
        + getFilename() : String
        + getURI() : URI
    }

    class OldFileLoader <<系统历史遗留的文件加载器>>{
        + getFile(uri: String) : File
    }

    class UglyFileLoader <<另一个系统历史遗留的文件加载器>>{
        + getFile(prefix: String, filename: String) : File
    }

    class OldFileLoaderAdapter <<OldFileLoader的适配器>>{
        + loadResourceAsStream(resource: Resource): InputStream
    }

    class UglyFileLoaderAdapter <<UglyFileLoader的适配器>>{
        - uglyFileLoader: UglyFileLoader
        + UglyFileLoaderAdapter(uglyFileLoader: UglyFileLoader)
        + loadResourceAsStream(resource: Resource): InputStream
    }

    Resource <|.. FileSystemResource
    Resource <.. ResourceLoader
    OldFileLoader <|-- OldFileLoaderAdapter
    ResourceLoader <|.. OldFileLoaderAdapter
    UglyFileLoader <-- UglyFileLoaderAdapter
    ResourceLoader <|.. UglyFileLoaderAdapter
}

package com.gelvt.gofdp{
    class App <<Client>>{
        + main(String[] args)
    }
}

App ..> Resource
App ..> ResourceLoader


footer
<font size="20" color="red">http://www.bughui.com</font>
endfooter

@enduml